Recarga de la lista de tares cada vez que se abre la actividad, correciones modo oscuro y se han añadido traducciones al inglés y catalán

--- a/app/src/main/res/layout/activity_delete_all_notes.xml
+++ b/app/src/main/res/layout/activity_delete_all_notes.xml
@@ -7,14 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".DeleteAllNotesActivity">
 
-    <ImageView
-        android:id="@+id/bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/background"
-        android:scaleType="centerCrop"
-        android:src="@drawable/bg" />
-
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar"
         android:layout_width="0dp"
@@ -86,7 +78,8 @@
         android:text="@string/btn_deleteAllNotes"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:backgroundTint="?attr/colorError"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/design_default_color_error"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +100,7 @@
         android:pointerIcon="none"
         android:text="@string/btn_cancel_txt"
         android:textAlignment="center"
+        android:textColor="@color/white"
         app:backgroundTint="@color/material_dynamic_neutral10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
