--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -7,14 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".AddNoteActivity">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/background"
-        android:scaleType="centerCrop"
-        android:src="@drawable/bg" />
-
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar"
         android:layout_width="0dp"
@@ -57,6 +49,8 @@
         app:layout_constraintStart_toEndOf="@+id/icon_toolbar"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSave_addNote"
         android:layout_width="wrap_content"
@@ -69,6 +63,7 @@
         android:pointerIcon="none"
         android:text="@string/btn_saveNote_txt"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:backgroundTint="@color/material_dynamic_primary40"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +75,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCancel_addNote"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
@@ -89,11 +84,14 @@
         android:pointerIcon="none"
         android:text="@string/btn_cancel_txt"
         android:textAlignment="center"
+        android:textColor="@color/white"
         app:backgroundTint="@color/material_dynamic_neutral10"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave_addNote">
+        app:layout_constraintTop_toBottomOf="@+id/btnSave_addNote"
+        app:layout_constraintVertical_bias="0.009">
 
     </com.google.android.material.button.MaterialButton>
 
@@ -120,7 +118,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:minHeight="100dp"
-        app:boxBackgroundColor="#E3F2FD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_h1_AddNote"
@@ -131,13 +128,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:width="320dp"
-            android:backgroundTint="#7AFFFFFF"
             android:hint="@string/txtInput_AddNote"
             android:minHeight="100dp"
-            android:textColor="#000000"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
